implementing swagger on routes
